# atpl25-SATsolver

./: README.md  cabal.project  hqp-bench.hs  runtests.hs  satq.cabal  shell.nix
HQPlayground/: hqp.cabal
HQPlayground/HQP/HQP/QOp/: MatrixSemantics.hs  Operator.hs  Simplify.hs
HQPlayground/exe/: SAT.hs
HQPlayground/src/: HQP.hs
HQPlayground/srcSAT/: AST.hs  Parser.hs  Quantumize.hs  Transform.hs
exe/: SAT.hs  grover.hs  mv.hs
results/: gen-grov.html  spec-grov.html
src/: ANF.hs  AST.hs  Comp.hs  Eval.hs  EvalMV.hs  Gates.hs  GenEval.hs  Generator.hs  Grovers.hs  Grovers2.hs  LinAlg.hs  Macros.hs  Measure.hs  Parser.hs  PhaseEval.hs  PrettyPrinter.hs  ProgramInversion.hs  Quantumize.hs  SpecEval.hs  StateVector.hs  StaticOptimizer.hs  Tensors.hs  Transform.hs  Validation.hs  Verif.hs
src/GenEval/: ANF.hs  AST.hs  Comp.hs  Eval.hs  Gates.hs  Generator.hs  Grovers.hs  LinAlg.hs  Measure.hs  Parser.hs  PhaseEval.hs  StateVector.hs  Tensors.hs  Transform.hs  Validation.hs  Verif.hs
src/SpecEval/: ANF.hs  AST.hs  Eval.hs  Gates.hs  Grovers.hs  Measure.hs  Parser.hs  Verif.hs
src2/: Comp.hs  Eval.hs  Gates.hs  Grovers.hs
tests/: Eval_Tests.hs  GenEval_Tests.hs  GroverSimulation.hs  Grover_Tests.hs  MV_Tests.hs  SpecEval_PropTests.hs  Tests.hs  runtests.hs
