cabal-version:      3.4
name:               satq
version:            0.1.0.0
homepage:           https://github.com/sunsky426/atpl25-SATsolver
license:            BSD-3-Clause
author:             Barbella, Kanne, Schmidt, Zou
maintainer:         -
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AST,
                      ANF,
                      Generator,
                      Parser,
                      Quantumize,
                      Grovers,
                      Eval,
                      PhaseEval,
                      Gates,
                      LinAlg,
                      Comp,
                      Transform,
                      EvalMV,
                      StateVector,
                      Verif,
                      Tensors,
                      Measure,
                      Validation
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      mtl,
                      random,
                      hmatrix,
                      vector,
                      containers
    hs-source-dirs:   exe,
                      src
    default-language: GHC2021

executable SATQ
    import:           warnings
    main-is:          SAT.hs

    build-depends:    base ^>=4.18.2.1,
                      mtl,
                      satq,
                      random,
                      hmatrix,
                      vector,
                      containers

    hs-source-dirs:   exe

    default-language: GHC2021

executable grover
    import:           warnings
    main-is:          grover.hs
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      mtl,
                      satq,
                      random,
                      hmatrix,
                      vector,
                      containers,
                      criterion
    hs-source-dirs:   exe,
    default-language: GHC2021

test-suite tests
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    other-modules:    Eval_Tests,
                      MV_Tests,
                      Tests,
    hs-source-dirs:   tests
    build-depends:
        base ^>=4.18.2.1,
        tasty,
        tasty-hunit,
        vector,
        hmatrix,
        containers,
        satq
