cabal-version:      3.4
name:               satq
version:            0.1.0.0
homepage:           https://github.com/sunsky426/atpl25-SATsolver
license:            BSD-3-Clause
author:             Barbella, Kanne, Schmidt, Zou
maintainer:         -
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-orphans -Wno-unused-imports

common common-options
    default-language: GHC2021    
    default-extensions:
        NoMonomorphismRestriction,
        FlexibleContexts,
        FlexibleInstances,
        TypeFamilies,
        TypeSynonymInstances,
        BinaryLiterals,
        PatternSynonyms,
        ViewPatterns,
        LambdaCase,
        AllowAmbiguousTypes,
        TypeApplications,
        ScopedTypeVariables,
        GeneralizedNewtypeDeriving,
        DataKinds,
        UndecidableInstances

library
    import:           warnings
    exposed-modules:  GenEval,
                      SpecEval,
                      GenEval_Tests,
                      SpecEval_PropTests,
                      Tests
    other-modules:    GenEval.ANF,
                      GenEval.Comp,
                      GenEval.Grovers,
                      GenEval.Parser,
                      GenEval.AST,
                      GenEval.Eval,
                      GenEval.Gates,
                      GenEval.Generator,
                      GenEval.LinAlg,
                      GenEval.StateVector,
                      GenEval.Validation,
                      SpecEval.ANF,
                      SpecEval.AST,
                      SpecEval.Eval, 
                      SpecEval.Gates, 
                      SpecEval.Parser,
                      SpecEval.Measure,
                      SpecEval.Verif,
                      SpecEval.Grovers
    build-depends:    base ^>=4.18.2.1,
                      mtl,
                      random,
                      hmatrix,
                      vector,
                      containers,
                      tasty,
                      tasty-hunit,
                      QuickCheck,
                      tasty-quickcheck
    hs-source-dirs:   exe,
                      src,
                      tests,
                      src/GenEval,
                      src/SpecEval
    default-language: GHC2021

executable SATQ
    import:           warnings
    main-is:          SAT.hs
    build-depends:    base ^>=4.18.2.1,
                      mtl,
                      satq,
                      random,
                      hmatrix,
                      vector,
                      containers,
                      tasty,
                      tasty-hunit

    hs-source-dirs:   exe,

    default-language: GHC2021

executable grover
    import:           warnings
    main-is:          grover.hs
    build-depends:    base ^>=4.18.2.1,
                      mtl,
                      satq,
                      random,
                      hmatrix,
                      vector,
                      criterion,
                      containers, 
                      QuickCheck
    hs-source-dirs:   exe
    default-language: GHC2021

test-suite tests
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , satq
      , tasty-quickcheck
      , QuickCheck
